# Agrisarathi

./: .gitignore  DockerFile  PotaoVariety.xlsx  README.md  docker-compose.yml  manage.py  potato_late-blight_08_zoom-Photo-OMAFRA-900x580.jpeg:Zone.Identifier  requirements.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
Agrisarthi/: asgi.py  celery_app.py  routers.py  settings.py  urls.py  wsgi.py
experiments/: experiments.ipynb
farmers/: admin.py  data.py  models.py  scraper.py  serializers.py  tasks.py  urls.py  views.py
fponsuppliers/: admin.py  apps.py  backends.py  data.py  managers.py  models.py  serializers.py  urls.py  views.py
news_scraper/: scraper.py
