[metadata]
license=MIT
license_file=LICENSE
classifiers=
    "Programming Language :: Python :: 3.10"

[options]
install_requires=
    requests=2.28.0
    ensure==1.0.2
python_requires = >=3.9

[options.extra_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[flake8]
max-line-length = 160
exclude = __init__.py